--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,56 @@
-version: 2
-jobs:
-  build:
-    docker:
-      - image: golang:1.13
-    steps:
-      - checkout
-      - run: make
+ version: 2                                                                       
+ jobs:                                                                            
+   test:                                                                          
+     docker:                                                                      
+       - image: golang:1.13                                                  
+     steps:                                                                       
+       - checkout                                                                 
+       - run: make                                                                
+   docker-build:                                                                  
+     docker:                                                                      
+         - image: docker:stable-git                                               
+     steps:                                                                       
+       - checkout                                                                 
+       - setup_remote_docker                                                      
+       - run: apk add --update make                                               
+       - run: make docker-build                                                   
+       - run: make docker-save                                                    
+       - persist_to_workspace:                                                    
+           root: .                                                                
+           paths:                                                                 
+            - bin/image.tar                                                       
+   docker-deploy:                                                                 
+     docker:                                                                      
+         - image: docker:stable-git                                               
+     steps:                                                                       
+       - checkout                                                                 
+       - attach_workspace:                                                        
+           at: /tmp/workspace                                                     
+       - setup_remote_docker                                                      
+       - run: apk add --update make                                               
+       - run: echo "$DOCKER_PASS" | docker login -u="$DOCKER_USER" --password-stdin
+       - run: docker load -i /tmp/workspace/bin/image.tar                         
+       - run: make docker-deploy                                                  
+                                                                                  
+                                                                                  
+ workflows:                                                                       
+   version: 2                                                                     
+   test_build_docker:                                                             
+     jobs:                                                                        
+       - test:                                                                    
+           filters:                                                               
+             tags:                                                                
+               only: /.*/                                                         
+       - docker-build:                                                            
+           filters:                                                               
+             tags:                                                                
+               only: /.*/                                                         
+       - docker-deploy:                                                           
+           requires:                                                              
+             - test                                                               
+             - docker-build                                                       
+           filters:                                                               
+             tags:                                                                
+               only: /^v.*/                                                       
+             branches:                                                            
+               ignore: /.*/
